# chimeraboost

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-docs.txt  sitemap.xml
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md
api/: index.html
benchmarks/: A1_PLAN.md  BAGGING_PLAN.md  CATCROSS_PLAN.md  GROW_PLAN.md  HIGHCARD_PLAN.md  M1_PLAN.md  PARETO_PLAN.md  QUANT_PLAN.md  REFIT_PLAN.md  STRENGTH_VIZ_PLAN.md  a1_screen_read.py  analyze_grinsztajn_snr.py  b1_smoke.py  b4_parallel_timing.py  b4_worker_count.py  b7_reweight_probe.py  bagging_b1_agreement.py  bench_status.py  bprep_smoke.py  brier_gap.py  compare_runs.py  fit_time_delta.py  fuzz_inputs.py  grow_smoke.py  hc_gap.py  knob_characterization.py  m1_6seed_read.py  m1_bagged_smoke.py  m1_baseline_facts.py  m1_gate_fittax.py  m1_gate_read.py  m1_hc_eligibility.py  m1_okcupid_read.py  m1_screen_read.py  m1_smoke.py  make_golden.py  make_pareto.py  make_slowdown_hist.py  make_tabarena_pareto.py  make_tables.py  (+19 more)
chimeraboost/: __init__.py  binning.py  booster.py  losses.py  preprocessing.py  sklearn_api.py  target_encoding.py  tree.py  warmup.py
concepts/: index.html
deployment/: index.html
docs/: PROJECT_STATUS.md  api.md  concepts.md  deployment.md  faq.md  getting-started.md  index.md  parameters.md  recipes.md  shap.md
faq/: index.html
getting-started/: index.html
parameters/: index.html
recipes/: index.html
search/: search_index.json
shap/: index.html
tests/: golden_metrics.json  golden_synthgen.json  (+25 more)
(+54 files in other folders)
