[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "chimeraboost"
version = "0.22.0"
description = "CatBoost-inspired gradient boosting in pure Python with a numba backend"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# pandas is intentionally NOT a dependency: the library consumes DataFrames
# through their own to_numpy/columns attributes, so pandas (or polars) is only
# needed by users who pass frames -- and they already have it.
dependencies = [
    "numpy>=1.22",
    "numba>=0.57",
    "scikit-learn>=1.0",
    "scipy>=1.7",
]

[project.urls]
Homepage = "https://github.com/bbstats/chimeraboost"
Repository = "https://github.com/bbstats/chimeraboost"

[project.optional-dependencies]
dev = ["pytest", "pandas>=1.3"]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.24", "black>=24.0"]

[tool.setuptools.packages.find]
include = ["chimeraboost*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# `l` is the established name for a leaf index throughout the tree kernels, where
# it reads naturally alongside `f` (feature) and `b` (bin); E741 would force a
# churny rename across the histogram code for no clarity gain.
ignore = ["E741"]
